@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,7 +36,6 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Collections;
 import java.util.Set;
 
 import javax.annotation.processing.RoundEnvironment;
@@ -59,6 +58,7 @@ public class StubPortProcessor extends AbstractProcessor {
     static final String JDK_COMMIT = "https://raw.githubusercontent.com/openjdk/jdk/";
 
     static final String STUB_PORT_CLASS_NAME = "org.graalvm.compiler.lir.StubPort";
+    static final String STUB_PORTS_CLASS_NAME = "org.graalvm.compiler.lir.StubPorts";
     static final String SYNC_CHECK_ENV_VAR = "HOTSPOT_PORT_SYNC_CHECK";
     static final String HTTPS_PROXY_ENV_VAR = "HTTPS_PROXY";
 
@@ -69,7 +69,43 @@ public class StubPortProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return Collections.singleton(STUB_PORT_CLASS_NAME);
+        return Set.of(STUB_PORT_CLASS_NAME, STUB_PORTS_CLASS_NAME);
+    }
+
+    private void compareDigest(MessageDigest md, AnnotationMirror annotationMirror, Element element) throws IOException, URISyntaxException {
+        String path = getAnnotationValue(annotationMirror, "path", String.class);
+        int lineStart = getAnnotationValue(annotationMirror, "lineStart", Integer.class);
+        int lineEnd = getAnnotationValue(annotationMirror, "lineEnd", Integer.class);
+        String commit = getAnnotationValue(annotationMirror, "commit", String.class);
+        String sha1 = getAnnotationValue(annotationMirror, "sha1", String.class);
+
+        Proxy proxy = Proxy.NO_PROXY;
+        String proxyEnv = System.getenv(HTTPS_PROXY_ENV_VAR);
+
+        if (proxyEnv != null) {
+            URI proxyURI = new URI(System.getenv(HTTPS_PROXY_ENV_VAR));
+            proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyURI.getHost(), proxyURI.getPort()));
+        }
+
+        if (proxyEnv != null) {
+            URI proxyURI = new URI(System.getenv(HTTPS_PROXY_ENV_VAR));
+            proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyURI.getHost(), proxyURI.getPort()));
+        }
+
+        String url = JDK_LATEST + path;
+        URLConnection connection = new URL(url).openConnection(proxy);
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+            // Note that in.lines() discards the line separator and the digest
+            // will be different from hashing the whole file.
+            in.lines().skip(lineStart).limit(lineEnd - lineStart).map(String::getBytes).forEach(md::update);
+        }
+        String digest = String.format("%040x", new BigInteger(1, md.digest()));
+        if (!sha1.equals(digest)) {
+            String oldUrl = JDK_COMMIT + commit + '/' + path;
+            env().getMessager().printMessage(Diagnostic.Kind.ERROR,
+                            String.format("Sha1 digest of %s[%d:%d] (ported by %s) does not match: expected %s but was %s. See diff of %s and %s.",
+                                            path, lineStart, lineEnd, element.toString(), sha1, digest, oldUrl, url));
+        }
     }
 
     @Override
@@ -79,39 +115,19 @@ public class StubPortProcessor extends AbstractProcessor {
                 try {
                     // Set https.protocols explicitly to avoid handshake failure
                     System.setProperty("https.protocols", "TLSv1.2");
-                    MessageDigest md = MessageDigest.getInstance("SHA-1");
                     TypeElement tStubPort = getTypeElement(STUB_PORT_CLASS_NAME);
+                    MessageDigest md = MessageDigest.getInstance("SHA-1");
 
                     for (Element element : roundEnv.getElementsAnnotatedWith(tStubPort)) {
-                        AnnotationMirror annotationMirror = getAnnotation(element, tStubPort.asType());
+                        compareDigest(md, getAnnotation(element, tStubPort.asType()), element);
+                    }
 
-                        String path = getAnnotationValue(annotationMirror, "path", String.class);
-                        int lineStart = getAnnotationValue(annotationMirror, "lineStart", Integer.class);
-                        int lineEnd = getAnnotationValue(annotationMirror, "lineEnd", Integer.class);
-                        String commit = getAnnotationValue(annotationMirror, "commit", String.class);
-                        String sha1 = getAnnotationValue(annotationMirror, "sha1", String.class);
+                    TypeElement tStubPorts = getTypeElement(STUB_PORTS_CLASS_NAME);
 
-                        Proxy proxy = Proxy.NO_PROXY;
-                        String proxyEnv = System.getenv(HTTPS_PROXY_ENV_VAR);
-
-                        if (proxyEnv != null) {
-                            URI proxyURI = new URI(System.getenv(HTTPS_PROXY_ENV_VAR));
-                            proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyURI.getHost(), proxyURI.getPort()));
-                        }
-
-                        String url = JDK_LATEST + path;
-                        URLConnection connection = new URL(url).openConnection(proxy);
-                        try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-                            // Note that in.lines() discards the line separator and the digest will
-                            // be different from hashing the whole file.
-                            in.lines().skip(lineStart).limit(lineEnd - lineStart).map(String::getBytes).forEach(md::update);
-                        }
-                        String digest = String.format("%040x", new BigInteger(1, md.digest()));
-                        if (!sha1.equals(digest)) {
-                            String oldUrl = JDK_COMMIT + commit + '/' + path;
-                            env().getMessager().printMessage(Diagnostic.Kind.ERROR,
-                                            String.format("Sha1 digest of %s[%d:%d] does not match: expected %s but was %s. See diff of %s and %s.",
-                                                            path, lineStart, lineEnd, sha1, digest, oldUrl, url));
+                    for (Element element : roundEnv.getElementsAnnotatedWith(tStubPorts)) {
+                        AnnotationMirror stubPorts = getAnnotation(element, tStubPorts.asType());
+                        for (AnnotationMirror stubPort : getAnnotationValueList(stubPorts, "value", AnnotationMirror.class)) {
+                            compareDigest(md, stubPort, element);
                         }
                     }
                 } catch (NoSuchAlgorithmException | IOException | URISyntaxException e) {
